--- a/QuantumultX/Bilibili.conf
+++ b/QuantumultX/Bilibili.conf
@@ -2,6 +2,12 @@ hostname = app.bilibili.com,api.live.bilibili.com,api.vc.bilibili.com, api.bilib
 
 
 
+# > BiliBili_哔哩哔哩_屏蔽IP请求
+^https?:\/\/app\.bilibili\.com\/x\/resource\/ip url reject
+# > BiliBili_哔哩哔哩_屏蔽
+^https?:\/\/app\.bilibili\.com\/bilibili\.app\.interface\.v1\.Search\/Default url reject
+# > BiliBili_哔哩哔哩_屏蔽首页右上活动[卸载重装]
+^https?:\/\/app\.bilibili\.com\/x\/resource\/top\/activity url reject-dict
 # ～ BiliBili_哔哩哔哩_繁体CC字幕转中文简体@ddgksf2013
 ;^https?:\/\/i.\.hdslb\.com\/bfs\/subtitle\/.+\.json$ url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Script/bilibili_cc.js
 # ～ BiliBili_哔哩哔哩_观影页面去广告@ddgksf2013
