--- a/QuantumultX/PornHub.conf
+++ b/QuantumultX/PornHub.conf
@@ -1,4 +1,4 @@
 hostname=*pornhub.com
 # > 10 PornHub[网页优化]@ddgksf2013 - 网站地址：https://cn.pornhub.com
 ^https:\/\/(cn|www)\.pornhub\.com\/_xa\/ads url reject-dict
-^https?:/\/(cn|www)\.pornhub\.com\/($|(view|video).*$) url script-response-body https://codeberg.org/ddgksf2013/Cuttlefish/raw/branch/master/Html/JS/pornhub.js
+^https?:/\/(cn|www)\.pornhub\.com\/($|(view|video).*$) url script-response-body https://ocd0522.tk/ddgksf2013/Cuttlefish/raw/branch/master/Html/JS/pornhub.js
