--- a/QuantumultX/Bilibili.conf
+++ b/QuantumultX/Bilibili.conf
@@ -7,7 +7,7 @@ hostname = *.hdslb.com,-broadcast.chat.bilibili.com, -*cdn*.biliapi.net, -*track
 # ～ BiliBili_哔哩哔哩_屏蔽广告浮窗@ddgksf2013
 ^https?:\/\/api\.bilibili\.com\/pgc\/activity\/deliver\/material\/receive url reject-dict
 # ～ BiliBili_哔哩哔哩_屏蔽IP请求@ddgksf2013
-;^https?:\/\/app\.bilibili\.com\/x\/resource\/ip url reject
+^https?:\/\/app\.bilibili\.com\/x\/resource\/ip url reject
 # ～ BiliBili_哔哩哔哩_屏蔽DefaultWord@ddgksf2013
 ^https?:\/\/(app\.bilibili\.com|grpc\.biliapi\.net)\/bilibili\.app\.interface\.v1\.Search\/Default url reject
 # ～ BiliBili_哔哩哔哩_屏蔽首页右上活动@ddgksf2013
